# SuperKnife

./: .gitignore  CMakeLists.txt  angular.json  main.js  package-lock.json  package.json  pom.xml  readme.md  tsconfig.electron.json
backend/: CMakeLists.txt  dllmain.cpp
backend/cmake/: catch2.cmake  info.cmake  msvc.cmake
backend/src/: compiler.h  define.h  dllmain.cpp  headers.h  hello.cpp  hello.h
backend/tests/: CMakeLists.txt  tests.cpp
cmake/: catch2.cmake
data/: auth.db
electron/: interface.d.ts  main.ts  preload.ts
native/: CMakeLists.txt  auth.cpp  auth.h
scripts/: createuser.sql
src/: index.html
src/app/: app.component.ts  app.config.ts  app.routes.ts
src/app/components/window-controls/: window-controls.component.html  window-controls.component.scss  window-controls.component.spec.ts  window-controls.component.ts
src/app/core/: electron.service.ts
src/app/interceptors/: auth.interceptor.ts
src/app/pages/login/: login.component.html  login.component.scss  login.component.ts
src/app/services/: auth.service.ts
src/main/java/com/whaim/superknife/: SuperKnifeApplication.java
src/main/java/com/whaim/superknife/common/: ApiResult.java
src/main/java/com/whaim/superknife/configuration/: JmsConfig.java
src/main/java/com/whaim/superknife/controller/: MQController.java
src/main/java/com/whaim/superknife/entity/: TbUserEntity.java
src/main/java/com/whaim/superknife/listener/: MQListener.java
src/main/resources/: application.properties  application.yaml
src/main/resources/db/: schema.sql
src/main/resources/static/: index.html  main.5deee52a3c6db31b.js
src/test/java/com/whaim/superknife/: SuperKnifeApplicationTests.java
tests/: CMakeLists.txt  tests.cpp
web/: README.md  angular.json  package-lock.json  package.json
web/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
web/src/app/pages/main/: main.component.html  main.component.scss
web/src/app/shared/footer/: footer.component.html  footer.component.scss
web/src/app/shared/header/: header.component.html  header.component.scss
webui/: .gitignore  README.md  angular.json  main.js  package-lock.json  package.json
webui/src/: index.html
webui/src/app/: app.component.ts  app.config.ts  app.routes.ts
webui/src/app/guards/: auth.guard.ts
webui/src/app/pages/login/: login.component.html  login.component.scss  login.component.ts
webui/src/app/services/: auth.service.ts
